# boxBot

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
config/: README.md  config.example.yaml  pricing.yaml  sandbox-requirements.txt  seccomp-sandbox.json  web-search.yaml  whatsapp.example.yaml
data/calibration/: aec_delay_samples.json
displays/example_display/: README.md  __init__.py  display.yaml
displays/focus_clock/: display.json
displays/home_metrics/: display.json
displays/morning_brief/: display.json
displays/now_listening/: display.json
docs/: architecture.md  display-development.md  display-style-guide.md  display-system.md  hal.md  hardware-setup.md  integrations.md  memory-correction-fix.md  memory.md  os-hardening.md  perception.md  sandbox.md  security.md  skills-development.md  user-registration.md  voice-id-redesign.md  voice-pipeline.md
docs/issues/: 2026-05-01-microphone-watchdog-crash.md
docs/plans/: code-review-remediation-2026-06.md  implementation-spec-2026-04-23.md  led-state-diagnostic.md  memory-roadmap-post-phase-a.md  model-upgrade-opus-4-7.md  multi-speaker-conversation.md  onboarding-identity-bootstrap.md  person-id-overhaul.md  whatif-reflection-cycle.md
infra/whatsapp_relay/: lambda_function.py
integrations/calendar/: manifest.yaml  script.py
integrations/home_assistant/: manifest.yaml  script.py
integrations/weather/: manifest.yaml  script.py
presentation/: README.md  boxBot_SmartHome_2.0.pptx  build_deck.py
scripts/: README.md  backfill_memory_cleanup.py  block_gallery.py  calendar_auth.py  calibrate_aec.py  calibrate_colour.py  deploy-to-pi.sh  deploy.sh  harden-os.sh  migrate_calendar_secret.py  migrate_operational_to_methodology.py  migrate_users_to_signal.py  pi_show.sh  prefetch_analysis.py  preview_display.py  render_and_show.sh  restart-boxbot.sh  sandbox_bootstrap.py  scrub_poisoned_trigger_summaries.py  setup-sandbox.sh  setup-signal.sh  setup.sh  show_on_screen.py  undo_last_dream.py  wipe_voice_enrollment.py
scripts/diag/: README.md  analyze_voice.py  capture_voice.py  seed_clusters.py
scripts/systemd/: boxbot.service  install.sh  signal-cli.service
skills/bb/: SKILL.md
skills/bb/examples/: note_with_memory.py
skills/bb/modules/: audio.md  auth.md  camera.md  display.md  integrations.md  memory.md  packages.md  photos.md  secrets.md  skill.md  tasks.md  workspace.md
skills/example_skill/: README.md  __init__.py  skill.yaml
skills/hal-sandbox-ref/: SKILL.md
skills/home/: SKILL.md
skills/home/modules/: cameras.md  entities.md  mutation_policy.md  services.md
skills/onboarding/: SKILL.md
skills/skill_authoring/: SKILL.md
src/boxbot/: __init__.py
src/boxbot/communication/: README.md  __init__.py  audio_capture.py  audio_player.py  auth.py  barge_in.py  channels.py  diarization.py  router.py  signal_client.py  signal_inbound.py  stt.py  tts.py  vad.py  voice.py  wake_word.py  whatsapp.py  whatsapp_inbound.py
src/boxbot/conversations/: __init__.py  store.py
src/boxbot/core/: README.md  __init__.py  agent.py  agent_sdk_adapter.py  agent_state.py  config.py  conversation.py  events.py  latency.py  main.py  output_dispatcher.py  paths.py  scheduler.py  silent_log.py
src/boxbot/cost/: __init__.py  compute.py  event.py  pricing.py  record.py
src/boxbot/diagnostics/: __init__.py  memory.py
src/boxbot/displays/: README.md  __init__.py  blocks.py  data_sources.py  manager.py  renderer.py  spec.py  themes.py
src/boxbot/hardware/: README.md  __init__.py  (+7 more)
src/boxbot/sdk/: README.md  __init__.py  _transport.py  _validators.py  audio.py  auth.py  calendar.py  camera.py  display.py  integration.py  integrations.py  memory.py  packages.py  photos.py  pyproject.toml  secrets.py  skill.py  tasks.py  workspace.py
tests/: README.md  conftest.py  display_test_harness.py  display_test_harness_lite.py  test_accessed_memories_wiring.py  test_agent_image_scrub.py  test_agent_max_turns.py  test_agent_routing.py  test_agent_sdk_adapter.py  test_agent_sdk_loop.py  test_audio.py  test_backfill_memory_cleanup.py  test_communication.py  test_config.py  test_conversation.py  test_conversation_store.py  test_cost.py  test_cost_agent.py  test_cost_dream.py  test_cost_elevenlabs.py  test_cost_web_search.py  test_data_source_wiring.py  test_dispatch_as_bridge.py  test_display_rotation_persistence.py  test_displays.py  test_dream_neighbour_expansion.py  test_dream_phase.py  test_drop_operational_type.py  test_events.py  test_extraction_pipeline.py  test_fusion.py  test_home_assistant_integration.py  test_identity_actions.py  test_injection_block_persistence.py  test_integration_loader.py  test_integration_logs.py  test_integration_persist.py  test_integration_runner.py  test_integrations_sdk.py  test_memory.py  (+39 more)
(+77 files in other folders)
