[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "boxbot-sdk"
version = "0.1.0"
description = "boxBot SDK — constrained API for agent sandbox scripts"
requires-python = ">=3.11"
# No dependencies beyond stdlib — the SDK runs in an isolated sandbox venv

# The SDK source lives at src/boxbot/sdk/ but needs to install as the
# top-level ``boxbot_sdk`` package. Hatch's ``packages`` directive
# expects a directory matching the package name, which we don't have.
# A single force-include line directory-remaps everything in this
# directory into ``boxbot_sdk/`` in the wheel — auto-discovers any new
# .py file dropped into the source dir, no manifest edits needed.
#
# Side effect: README.md and this pyproject.toml end up inside the
# installed package directory. Both inert. Accept it as the price of a
# layout that can't silently drop files.
[tool.hatch.build.targets.wheel.force-include]
"." = "boxbot_sdk"
